# annotation-queue-langsmith

./: .env.example  .gitignore  INTERVIEW.md  NOTE.md  README.md
backend/: Makefile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a3a5ead7ef5_initial_schema.py  20260216_add_span_fields.py  20260216_feedback_upsert.py
backend/scripts/: create_db.py  create_db.sh  seed_data.py
backend/src/: config.py  database.py  main.py  schemas.py  sql_utils.py
backend/src/routers/: feedback.py  projects.py  queues.py  rubrics.py  traces.py
backend/src/services/: feedback.py  projects.py  queues.py  rubrics.py  traces.py
backend/tests/: conftest.py  test_feedback.py  test_projects.py  test_queues.py  test_rubrics.py  test_traces.py
client/: eslint.config.js  package.json  pnpm-lock.yaml
client/src/: App.tsx  types.ts  vite.config.ts
client/src/components/: JsonHighlightViewer.tsx  Rubric.tsx
client/src/hooks/: useApi.ts
client/src/lib/: api.ts
client/src/pages/: AnnotationQueuePage.tsx  ProjectDetailsPage.tsx  ProjectsPage.tsx  QueuesPage.tsx
